Fixed scrolling issue, Added custom scrollbar, Added play button to song card

--- a/css/index.css
+++ b/css/index.css
@@ -22,16 +22,10 @@ a {
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
-      "menu nav"
+    /*"menu nav"*/
+      "menu content"
       "menu content"
       "controls controls";
-}
-
-#menu { 
-    grid-area: menu; 
-    background-color: #000000;
-    display: flex;
-    flex-direction: column;
 }
 
 #menu { 
@@ -86,10 +80,35 @@ a {
     margin-top: 30px;
 }
 
+#scroll-content {
+    background-color: #121212;
+    grid-area: content;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 14px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #FFFFFF4D;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #FFFFFF80;
+}
+
 #nav { 
-    grid-area: nav; 
-    background: #212121;
+    /*grid-area: nav; */
+    position: sticky;
+    top: 0;
+    background: #070707;
     color: #FFFFFF;
+    padding: .3rem 0;
     padding-right: 2rem;
     display: flex;
     flex-direction: row;
@@ -184,10 +203,13 @@ a {
 }
 
 #content { 
-    grid-area: content;
+    /*grid-area: content;*/
     background-color: #121212;
     color: #FFFFFF;
     padding: 24px 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
 }
 
 .song-cat-header {
@@ -239,9 +261,16 @@ a {
     background-color: #181818;
     border-radius: 4px;
     padding: 1rem;
+    cursor: pointer;
+    transition: background-color .3s ease;
+}
+
+.song-card:hover {
+    background-color: #282828;
 }
 
 .song-card-img {
+    box-shadow: 0 8px 8px rgba(0, 0, 0, .5);
     margin-bottom: 1rem;
 }
 
@@ -271,7 +300,40 @@ a {
     text-overflow: ellipsis;
 }
 
+.song-card-playbtn-container {
+    position: relative;
+}
 
+.song-card-playbtn {
+    background-color: #1DB954;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 360px;
+    height: 40px;
+    width: 40px;
+    position: absolute;
+    right: .6rem;
+    bottom: 0rem;
+    opacity: 0;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, .3);
+    cursor: initial;
+    transition: .3s ease;
+}
+
+.song-card-playbtn:hover {
+    transform: scale(1.05);
+}
+
+.song-card:hover .song-card-playbtn {
+    transform: translateY(-9.6px);
+    opacity: 1;
+}
+
+.song-card-playbtn a {
+    cursor: inherit;
+}
 
 #controls {
     grid-area: controls;
